syntax = "proto3";

package user;

option go_package = "generated/proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  int64 user_id = 1;
  string name = 2;
}

message GetUserResponse {
  int64 user_id = 1;
  string name = 2;
}